--- a/app/races.component.html
+++ b/app/races.component.html
@@ -1,10 +1,35 @@
+<main class="container" role="main">
+<h2>Cash left to enter races: <span>{{cashLeft() | currency:'USD':true}}</span> </h2>
 <ul>
-    <li *ngFor="let race of races">
-        <h2>{{ race.name }} {{ race.entryFee | currency:'USD':true }}</h2>
-        <p>{{ race.date | date:'MMM d, y, h:mm a' }}</p>
-        <p class="description">{{ race.about }}</p>
-        <button *ngIf="!race.isRacing" >Enter Race</button>
-        <h3 *ngIf="race.isRacing" >Already Racing</h3>
-    </li>
+  <li class="card" *ngFor="let race of races" [class.racing]="race.isRacing">
+    <div class="panel-body">
+      <div class="photo">
+        <img [src]="race.image" [alt]="race.imageDescription">
+      </div>
+      <table class="race-info">
+        <tr>
+          <td>
+            <h3>{{race.name}}</h3>
+            <p class="date">{{race.date | date:'MMM d, y, h:MM a'}}</p>
+            <p class="description">{{race.about}}</p>
+          </td>
+          <td>
+            <p class="price">{{race.entryFee | currency:'USD':true}}</p>
+          </td>
+          <td>
+            <button class="button" *ngIf="!race.isRacing">Enter Race</button>
+            <div *ngIf="race.isRacing">
+              <p class="status">Racing</p>
+              <button class="button-cancel">Cancel Race</button>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </li>
 </ul>
-<h2>Total cost: {{ totalCost() | currency:'USD':true }}</h2>
+<div class="price-total">
+  <h3>Total cost:</h3>
+  <p>{{totalCost() | currency:'USD':true}}</p>
+</div>
+</main>
